font-family 'Audiowide', cursive, página contacto hecha y footer overflow-x hidden fixed

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,35 +1,23 @@
 // Custom.scss
-// Option B: Include parts of Bootstrap
+
+$font-sizes: (
+  6: 0.8rem
+);
+
+$danger: #630031;
+
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+
+$font-family-base: 'Audiowide', cursive;
+
+
+// Option A:
 @import "../node_modules/bootstrap/scss/bootstrap";
+
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
-@import "../node_modules/bootstrap/scss/functions";
 
 // 2. Include any default variable overrides here
 
-// 3. Include remainder of required Bootstrap stylesheets
-@import "../node_modules/bootstrap/scss/variables";
-@import "../node_modules/bootstrap/scss/mixins";
-@import "../node_modules/bootstrap/scss/root";
-
-// 4. Include any optional Bootstrap CSS as needed
-@import "../node_modules/bootstrap/scss/utilities";
-@import "../node_modules/bootstrap/scss/reboot";
-@import "../node_modules/bootstrap/scss/type";
-@import "../node_modules/bootstrap/scss/images";
-@import "../node_modules/bootstrap/scss/containers";
-@import "../node_modules/bootstrap/scss/grid";
-@import "../node_modules/bootstrap/scss/helpers";
-@import "../node_modules/bootstrap/scss/navbar";
-@import "../node_modules/bootstrap/scss/nav";
-@import "../node_modules/bootstrap/scss/card";
-
-
-
-// 5. Optionally include utilities API last to generate classes based on the Sass map in _utilities.scss
-@import "../node_modules/bootstrap/scss/utilities/api";
-
-// 6. Add additional custom code here
-
-// .btn-dark:hover{
-//     background-color: #ab000a;
-// }
+body {
+    overflow-x: hidden;
+}
